Hide edit button if ad passed

--- a/AdifyCMS/Views/Campaigns/Details.cshtml
+++ b/AdifyCMS/Views/Campaigns/Details.cshtml
@@ -91,7 +91,11 @@
                 @Html.DisplayFor(modelItem => item.DidPass)
             </td>
             <td>
-                <a asp-controller="Ads" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                @if (!item.DidPass)
+                {
+                    <a asp-controller="Ads" asp-action="Edit" asp-route-id="@item.Id">Edit |</a>
+                }
+                
                 <a asp-controller="Ads" asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-controller="Ads" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
