--- a/AdifyCMS/Views/Shared/_Layout.cshtml
+++ b/AdifyCMS/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Ads" asp-action="Index">Ads</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Admin Panel</a>
+                        </li>
                     </ul>
                 </div>
             </div>
