--- a/AdifyCMS/Views/Shared/_Layout.cshtml
+++ b/AdifyCMS/Views/Shared/_Layout.cshtml
@@ -27,11 +27,23 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Ads" asp-action="Index">Ads</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Admin Panel</a>
-                        </li>
+                        @if (TempData.Peek("isAdmin").ToString() == "true")
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Admin Panel</a>
+                            </li>
+                        }
                     </ul>
                 </div>
+                    @if (TempData.Peek("isLoggedIn").ToString() == "true")
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Logout">Logout</a>
+                        </li>
+                    }
+
+                </div>
+
             </div>
         </nav>
     </header>
